--- a/app/nav2_ws/src/navigation2/nav2_bringup/params/nav2_params.yaml
+++ b/app/nav2_ws/src/navigation2/nav2_bringup/params/nav2_params.yaml
@@ -1,11 +1,11 @@
 amcl:
   ros__parameters:
     use_sim_time: True
-    alpha1: 0.05 # rotation noise from rotation
-    alpha2: 0.05 # rotation noise from translation
-    alpha3: 0.1  # translation noise from translation
-    alpha4: 0.05 # rotation noise from translation
-    alpha5: 0.05 # only for omniwheels (lateral motion wrt heading)
+    alpha1: 0.2
+    alpha2: 0.2
+    alpha3: 0.2
+    alpha4: 0.2
+    alpha5: 0.2
     base_frame_id: "base_footprint"
     beam_skip_distance: 0.5
     beam_skip_error_threshold: 0.9
@@ -16,9 +16,9 @@ amcl:
     laser_likelihood_max_dist: 2.0
     laser_max_range: 100.0
     laser_min_range: -1.0
-    laser_model_type: "likelihood_field_prob"
-    max_beams: 180
-    max_particles: 3000
+    laser_model_type: "likelihood_field"
+    max_beams: 60
+    max_particles: 2000
     min_particles: 500
     odom_frame_id: "odom"
     pf_err: 0.05
@@ -26,16 +26,16 @@ amcl:
     recovery_alpha_fast: 0.0
     recovery_alpha_slow: 0.0
     resample_interval: 1
-    robot_model_type: "nav2_amcl::OmniMotionModel"
+    robot_model_type: "nav2_amcl::DifferentialMotionModel"
     save_pose_rate: 0.5
     sigma_hit: 0.2
     tf_broadcast: true
     transform_tolerance: 1.0
     update_min_a: 0.2
     update_min_d: 0.25
-    z_hit: 0.7 # trust in scan matches (high if laserscan is good and maps is static)
-    z_rand: 0.3 # trust in randomness (opposite wrt z_hit)
+    z_hit: 0.5
     z_max: 0.05
+    z_rand: 0.5
     z_short: 0.05
     scan_topic: scan
 
@@ -189,10 +189,10 @@ local_costmap:
       robot_base_frame: base_link
       use_sim_time: True
       rolling_window: true
-      width: 1
-      height: 1
-      resolution: 0.02
-      robot_radius: 0.1
+      width: 3
+      height: 3
+      resolution: 0.05
+      robot_radius: 0.22
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
@@ -231,8 +231,8 @@ global_costmap:
       global_frame: map
       robot_base_frame: base_link
       use_sim_time: True
-      robot_radius: 0.1
-      resolution: 0.02
+      robot_radius: 0.22
+      resolution: 0.05
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
       obstacle_layer:
